--- a/InventarioAplicativo/Views/Item/AddOrEdit.cshtml
+++ b/InventarioAplicativo/Views/Item/AddOrEdit.cshtml
@@ -7,9 +7,10 @@
 <h4>Itens do Inventário</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="AddOrEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ItemID"  />
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Nome</label>
                 <input asp-for="Name" class="form-control" />
@@ -30,16 +31,22 @@
                 <input asp-for="Und" class="form-control" />
                 <span asp-validation-for="Und" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="submit" value="Enviar" class="btn btn-primary btn-block" />
+                </div>
+                <div class="form-group col-md-6">
+                    <a asp-action="Index" class="btn btn-secondary btn-block">
+                        <i class="fa fa-table"></i>
+                        Voltar a Lista
+                    </a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Voltar a Lista</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
