--- a/InventarioAplicativo/Views/Item/Index.cshtml
+++ b/InventarioAplicativo/Views/Item/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<InventarioAplicativo.Models.Item>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "🎒";
 }
 
 <h1>Itens</h1>
@@ -24,7 +24,6 @@
             </th>
             <th>
                 <a asp-action="AddOrEdit" class="btn btn-outline-success">
-                    <i class="far fa-plus-square"></i>
                     Adicionar novo item
                 </a>
             </th>
@@ -46,9 +45,11 @@
                 @Html.DisplayFor(modelItem => item.Und)
             </td>
             <td>
-                <a asp-action="AddOrEdit" asp-route-id="@item.ItemID"><i class="fa fa-marker fa-lg"></i></a>
-                <a asp-action="Delete" asp-route-id="@item.ItemID" class="text-danger ml-1" onclick="return confirm('Tem certeza que deseja exluir o item?')">
-                    <i class="fa fa-trash-alt fa-lg"></i>
+                <a asp-action="AddOrEdit" asp-route-id="@item.ItemID" class="text-primary ml-1 btn btn-outline-primary">
+                    Editar
+                </a>
+                <a asp-action="Delete" asp-route-id="@item.ItemID" class="text-danger ml-1 btn btn-outline-danger" onclick="return confirm('Tem certeza que deseja exluir o item?')">
+                    Deletar
                 </a>
             </td>
         </tr>
