Adiçao da tela de login, a mesma ainda não se encontra funcional

--- a/InventarioAplicativo/Views/Item/Index.cshtml
+++ b/InventarioAplicativo/Views/Item/Index.cshtml
@@ -3,56 +3,59 @@
 @{
     ViewData["Title"] = "🎒";
 }
-
 <h1>Itens</h1>
-<hr />
-
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Und)
-            </th>
-            <th>
-                <a asp-action="AddOrEdit" class="btn btn-outline-success">
-                    Adicionar novo item
-                </a>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Und)
-            </td>
-            <td>
-                <a asp-action="AddOrEdit" asp-route-id="@item.ItemID" class="text-primary ml-1 btn btn-outline-primary">
-                    Editar
-                </a>
-                <a asp-action="Delete" asp-route-id="@item.ItemID" class="text-danger ml-1 btn btn-outline-danger" onclick="return confirm('Tem certeza que deseja exluir o item?')">
-                    Deletar
-                </a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<br />
+<a class="btn btn-sm btn-primary mr-sm-2" asp-action="Logout" asp-controller="Account">Sair</a>
+<br />
+<div style="overflow:scroll;height:500px;width:100%;overflow:auto">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Type)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Und)
+                </th>
+                <th>
+                    <a asp-action="AddOrEdit" class="btn btn-outline-success">
+                        Adicionar novo item
+                    </a>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Type)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Und)
+                    </td>
+                    <td>
+                        <a asp-action="AddOrEdit" asp-route-id="@item.ItemID" class="text-primary ml-1 btn btn-outline-primary">
+                            Editar
+                        </a>
+                        <a asp-action="Delete" asp-route-id="@item.ItemID" class="text-danger ml-1 btn btn-outline-danger" onclick="return confirm('Tem certeza que deseja exluir o item?')">
+                            Deletar
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
