--- a/InventarioAplicativo/Views/Shared/_Layout.cshtml
+++ b/InventarioAplicativo/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:#00b5cc;">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color:azure; font-size:2em;">🎒InventarioApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Item" asp-action="Index" style="color:azure; font-size:2em;">🎒InventarioApp</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
